added instroctions in README.md